# bls-benches

./: .gitignore  Cargo.toml  README.md
benches/: verify.rs
circuits/: package-lock.json  package.json  tsconfig.json
circuits/circuits/: aggregate_bls_verify.circom
circuits/scripts/: 01_ceremony_phase1.sh
circuits/test/: test_aggregate_bls.ts  test_aggregate_bls_add.ts
circuits/test/circuits/: test_aggregate_bls_verify_4.circom
contracts/: Cargo.toml
contracts/tests/: main.rs
contracts/tests/quarry-agg-single-verify/: Cargo.toml
contracts/tests/quarry-agg-single-verify/src/: lib.rs
contracts/tests/quarry-multi-verify/: Cargo.toml
contracts/tests/quarry-multi-verify/src/: lib.rs
contracts/tests/quarry-single-verify/: Cargo.toml
contracts/tests/quarry-single-verify/src/: lib.rs
snarks/: README.md  package.json  tsconfig.json
snarks/scripts/: 01_ceremony_phase1.sh  02_build_aggregate_bls_verify.sh  02_build_aggregate_bls_verify_groth16.sh  02_build_aggregate_bls_verify_plonk.sh
snarks/test/: bls_utils.ts  test_aggregate_bls.ts
snarks/tmp_output/: test_aggregate_bls_add_4.r1cs  test_aggregate_bls_add_4.sym
snarks/tmp_output/test_aggregate_bls_add_4_js/: test_aggregate_bls_add_4.wasm
src/: lib.rs
wasm/: Cargo.toml  verify.wasm  verify_unsafe.wasm
wasm/actors/: Cargo.toml  README.md
wasm/actors/agg-single-verify/: Cargo.toml
wasm/actors/benches/: agg_multi_verify.rs  agg_single_verify.rs  dummy.rs  single_verify.rs
wasm/actors/contracts/agg-multi-verify/: Cargo.toml
wasm/actors/contracts/agg-multi-verify/src/: lib.rs
wasm/actors/contracts/agg-single-verify/: Cargo.toml
wasm/actors/contracts/agg-single-verify/src/: lib.rs
wasm/actors/contracts/single-verify/: Cargo.toml
wasm/actors/contracts/single-verify/src/: lib.rs
wasm/actors/single-verify/: Cargo.toml
wasm/actors/utils/: Cargo.toml
wasm/actors/utils/src/: lib.rs
wasm/benches/: verify.rs  verify_unsafe.rs
wasm/bindgen-protocol/: Cargo.toml  README.md
wasm/bindgen-protocol/bls-utils/rust-wasmer-wasi-runtime/: bindings.rs
wasm/bindgen-protocol/src/: main.rs
wasm/bls-tests/: Cargo.toml
wasm/bls-tests/fixtures/: verify-fvm-injected.wasm
wasm/bls-tests/src/: main.rs
wasm/bls-unsafe/: Cargo.toml  README.md
wasm/bls-unsafe/src/: lib.rs
wasm/bls-utils/: Cargo.toml  README.md
wasm/bls-utils/benches/: verify.rs  verify_unsafe.rs  wasm_verify.rs
wasm/bls-utils/rust-plugin/: Cargo.toml
wasm/bls-utils/rust-plugin/src/: export.rs
wasm/bls-utils/rust-wasmer-wasi-runtime/: bindings.rs
wasm/bls-utils/src/: lib.rs  main.rs
wasm/bls-utils/src/fixtures/: verify-gas-metered.wasm  verify.wasm
wasm/bls-utils/src/runtime/: fvm_injection.rs  mod.rs  module.rs  runtime.rs
wasm/bls-utils/src/spec/: bindings.rs  mod.rs  types.rs
wasm/bls-utils/src/wasm-files/: bls_utils.wasm  bls_utils_fvm_injected.wasm
wasm/src/: lib.rs  unsafe_verification.rs
