[package]
name = "bls_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls-signatures = { version = "0.13.0", default-features = false, features = ['pairing'] }
bls12_381 = "0.7.0"
criterion = { version = "0.4", default-features = false }
fvm-wasm-instrument = { git = "https://github.com/filecoin-project/fvm-wasm-instrument/" }
rand = "0.8"
wasm-bindgen = "0.2.83"

[[bench]]
name = "verify"
harness = false
