[package]
name = "quarry_integration_tests"
description = "quarry integration tests with the FVM"
version = "0.1.0"
edition = "2021"

[dependencies]
fvm = { version = "3.0.0-alpha.11", git = "https://github.com/filecoin-project/ref-fvm", default-features = false }
fvm_shared = { version = "3.0.0-alpha.12", git = "https://github.com/filecoin-project/ref-fvm", features = ["crypto"] }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_integration_tests = { version = "0.1.1-alpha.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_encoding = { version = "0.3.0", git = "https://github.com/filecoin-project/ref-fvm" }

anyhow = "1.0.47"
cid = { version = "0.8.5", default-features = false }
futures = "0.3.19"
multihash = { version = "0.16.1", default-features = false }
num-traits = "0.2"
lazy_static = "1.4.0"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
serde_repr = "0.1"
thiserror = "1.0.30"

[dependencies.wasmtime]
version = "1.0.2"
default-features = false
features = ["cranelift", "parallel-compilation"]

[dev-dependencies]
wat = "1.0.51"
serde = { version = "1.0", features = ["derive"] }
bls-signatures = { version = "0.12", default-features = false }
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = ["m2-native"] }
quarry-single-verify = { path = "tests/quarry-single-verify" }
quarry-multi-verify = { path = "tests/quarry-multi-verify" }
log = { version = "0.4.17" }
colog = { version = "1.1.0" }

[features]
default = ["fvm/testing", "fvm_shared/testing"]
m2-native = []
f4-as-account = ["fvm/f4-as-account"]

[patch.crates-io]
# temporary solution to funty@1.2.0 being yanked, we should propose bitvec upgrade to upstream filecoin crates
# tracking issue: https://github.com/bitvecto-rs/funty/issues/7
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }