[package]
name = "bls_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls-signatures = { version = "0.11.0", default-features = false, features = ['pairing'], optional = true }
bls12_381 = { version = "=0.6.0", features = ["experimental"] }
criterion = { version = "0.4", default-features = false, optional = true  }
rand = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true } 
sha2 = { version = "0.9"  }
pairing_lib = { version = "0.21.0", package = "pairing" }
thiserror = "1.0"
rand_core = { version = "0.6.0", optional = true }
hkdf = { version = "0.11.0", optional = true }

[[bench]]
name = "verify"
harness = false


[patch.crates-io]
# temporary solution to funty@1.2.0 being yanked, we should propose bitvec upgrade to upstream filecoin crates
# tracking issue: https://github.com/bitvecto-rs/funty/issues/7
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[features]
default = ["native"]
native = ["hkdf", "rand_core", "rand", "bls-signatures", "criterion",  "wasm-bindgen" ]
actor = []