[package]
name = "quarry_actors"
description = "quarry integration tests with the FVM"
version = "0.1.0"
edition = "2021"

[dependencies]
bls-signatures = { version = "0.13.0", default-features = false, features = ['pairing'] }
fvm = { version = "3.0.0-alpha.12", git = "https://github.com/filecoin-project/ref-fvm", default-features = false }
fvm_shared = { version = "3.0.0-alpha.12", git = "https://github.com/filecoin-project/ref-fvm", features = ["crypto"] }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_integration_tests = { version = "0.1.1-alpha.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_encoding = { version = "0.3.0", git = "https://github.com/filecoin-project/ref-fvm" }
bls_utils = { package="bls_utils", path = "../bls-utils" } 


anyhow = "1.0.47"
cid = { version = "0.9.0", default-features = false, features = ["serde-codec"] }
futures = "0.3.19"
multihash = { version = "0.16.1", default-features = false }
num-traits = "0.2"
lazy_static = "1.4.0"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
serde_repr = "0.1"
thiserror = "1.0.30"

[dependencies.wasmtime]
version = "2.0.2"
default-features = false
features = ["cranelift", "parallel-compilation"]

[dev-dependencies]
wat = "1.0.51"
criterion = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = ["m2-native"] }
quarry-single-verify = { path = "contracts/single-verify" }
quarry-multi-verify = { path = "contracts/agg-multi-verify" }
quarry-agg-single-verify = { path = "contracts/agg-single-verify" }
actor_utils = { path = "utils" }
log = { version = "0.4.17" }
colog = { version = "1.1.0" }
pairing_lib = { version = "0.22.0", package = "pairing" }


[features]
default = ["fvm/testing", "fvm_shared/testing"]


[[bench]]
name = "agg_multi_verify"
harness = false


[[bench]]
name = "agg_single_verify"
harness = false

[[bench]]
name = "single_verify"
harness = false