[package]
name = "bindgen-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fp-bindgen = { git="https://github.com/fiberplane/fp-bindgen", features = [
  "serde-bytes-compat",
  "generators",
]}
fvm_shared = "2.0.0"
once_cell = "1"
serde_tuple = "0.5"
