[package]
name = "bls-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls-signatures = { version = "0.13.0", default-features = false, features = ['pairing'] }
bls12_381 = { version = "=0.7.0", features = ["experimental"] }
parity-wasm = "0.45.0"
bls_wasm_unsafe = { path = "../bls-unsafe"}
bls_utils = { package="bls_utils", path = "../bls-utils"}
fvm-wasm-instrument = { git = "https://github.com/filecoin-project/fvm-wasm-instrument/" }
fvm_ipld_encoding = { version = "0.3.0",  git = "https://github.com/filecoin-project/ref-fvm" }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
fvm_shared = "2.0.0"
group = "0.12.1"
