[package]
name = "bls_wasm_unsafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "=0.7.0", features = ["experimental"] }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.9"  }
pairing_lib = { version = "0.22.0", package = "pairing" }
thiserror = "1.0"
