[package]
name = "bls_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasi = ["wasmer/js"]
runtime = [
  "wasmer/singlepass",
  "wasmer/sys",
  "wasmer-wasi",
  "fp-bindgen-support",
  "fvm-wasm-instrument",
  "parity-wasm"
]

[dependencies]
bls-signatures = { version = "0.13.0", default-features = false, features = ['pairing'] }
wasmer = { version = "3", default-features = false,  features= ["core"] }
wasmer-wasi = { version = "3", optional = true}
bls12_381 = { version = "=0.7.0", features = ["experimental"] }
criterion = { version = "0.4", default-features = false  }
rand = { version = "0.8" }
sha2 = { version = "0.9"  }
pairing_lib = { version = "0.22.0", package = "pairing" }
rand_core = { version = "0.6.0" }
hkdf = { version = "0.11.0" }
parity-wasm = { version = "0.45.0", optional = true }
bindings = {path = "./rust-plugin"}
bls_wasm_unsafe = { path = "../bls-unsafe"}
fvm-wasm-instrument = { git = "https://github.com/filecoin-project/fvm-wasm-instrument/", optional = true }
serde = { version = "1.0", features = ["derive"] }
fvm_shared = "2.0.0"
group = "0.12.1"
fp-bindgen-support = {git="https://github.com/fiberplane/fp-bindgen" , features = [
  "async",
  "host",
], optional = true}

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]


[[bench]]
name = "verify"
harness = false

[[bench]]
name = "verify_unsafe"
harness = false

[[bench]]
name = "wasm_verify"
harness = false