[package]
name = "actor_utils"
description = "quarry integration tests with the FVM"
version = "0.1.0"
edition = "2021"

[dependencies]
bls-signatures = { version = "0.13.0", default-features = false, features = ['pairing'] }
fvm = { version = "3.0.0-alpha.11", git = "https://github.com/filecoin-project/ref-fvm", default-features = false }
fvm_shared = { version = "3.0.0-alpha.12", git = "https://github.com/filecoin-project/ref-fvm", features = ["crypto"] }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_integration_tests = { version = "0.1.1-alpha.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_encoding = { version = "0.3.0", git = "https://github.com/filecoin-project/ref-fvm" }
bls_utils = { package="bls_utils", path = "../../bls-utils" } 
colog = { version = "1.1.0" }
pairing_lib = { version = "0.22.0", package = "pairing" }
log = { version = "0.4.17" }
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = ["m2-native"] }


anyhow = "1.0.47"
cid = { version = "0.8.5", default-features = false }
futures = "0.3.19"
multihash = { version = "0.16.1", default-features = false }
num-traits = "0.2"
lazy_static = "1.4.0"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
serde_repr = "0.1"
thiserror = "1.0.30"
